# babyOS

./: .gdbinit  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.cargo/: config.toml
_tests/: tests.rs
_tests/io/: vga_buffer.rs
_tests/utils/: mod.rs
src/: kernel.rs  lib.rs  macros.rs
src/interrupts/: idt.rs  mod.rs
src/io/: mod.rs  vga_buffer.rs
src/io/vga/: buffer.rs  color.rs  color_code.rs  cursor.rs  mod.rs  writer.rs
src/tests/: mod.rs
src/tests/io/: mod.rs  vga.rs  vga_buffer.rs
tests/: tests.rs
tests/io/: mod.rs  vga_buffer.rs
tests/utils/: mock_writer.rs  mod.rs
tools/: build.rs  install_deps.sh  uninstall_deps.sh  x86-target.json
